--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
   <style>
    * {
       font-family: "Do Hyeon" !important;
+      margin:0 !important;
     }
+    
   </style>
   <body>
     <div id="root"></div>
