--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/src/assets/bingsoo.png"/>
+    <link rel="icon" type="image/svg+xml" href="/src/assets/icon/bingsooicon.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>녹지마 빙수야!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,7 +12,7 @@
   <style>
    * {
       font-family: "Do Hyeon" !important;
-      margin:0 !important;
+     margin: 0;
     }
     
   </style>
